--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -17,7 +17,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/json2/20140204/json2.min.js"></script>
     <![endif]-->
 </head>
-<body class="sidebar-left-closed sidebar-right-closed">
+<body>
 
     <div class="loader hidden"></div>
 
